Fix spacing of table

--- a/static/style.css
+++ b/static/style.css
@@ -134,9 +134,9 @@ td:nth-child(2) {
     padding-left: 8px;
 }
 
-td:nth-child(3),
 td:nth-child(4) {
-    padding-left: 4px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 td a {
